--- a/tutorials/ExploringDeutschJozsaAlgorithm/AQ/ProviderDependencies.csproj
+++ b/tutorials/ExploringDeutschJozsaAlgorithm/AQ/ProviderDependencies.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
   
   <ItemGroup>
-    <PackageReference Include="Microsoft.Quantum.Providers.Honeywell" Version="0.24.201332" />
-    <PackageReference Include="Microsoft.Quantum.Providers.IonQ" Version="0.24.201332" />
+    <PackageReference Include="Microsoft.Quantum.Providers.Honeywell" Version="0.24.203759-sdl" />
+    <PackageReference Include="Microsoft.Quantum.Providers.IonQ" Version="0.24.203759-sdl" />
   </ItemGroup>
 </Project>
